// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentStatus /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="not-foud-404"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <h2
          className="row payment-status-row-1"
        >
          PAY_H
          : 
          failed
        </h2>
        <div
          className="row payment-status-row-2"
        >
          PAY_SUB_H
        </div>
        <div
          className="row payment-status-row-3"
        >
          <Link
            className="button full"
            to="/default/status"
          >
            PAY_TRY_AGAIN_BTN
          </Link>
        </div>
        <div
          className="row payment-status-row-4"
        >
          <p>
            PAY_GIVE_UP_TXT
          </p>
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            PAY_GIVE_UP_BTN
          </button>
        </div>
      </div>
    </div>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`Test <PaymentStatus /> cases should render failed state 1`] = `
<div
  className="container content"
  id="not-foud-404"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <h2
          className="row payment-status-row-1"
        >
          Payment
          : 
          failed
        </h2>
        <div
          className="row payment-status-row-2"
        >
          Something went wrong with the payment.
        </div>
        <div
          className="row payment-status-row-3"
        >
          <Link
            className="button full"
            to="/default/status"
          >
            Try again
          </Link>
        </div>
        <div
          className="row payment-status-row-4"
        >
          <p>
            If you cannot complete the transaction you can either try to get in touch with your bank or cancel the operation.
          </p>
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            Cancel operation and log out
          </button>
        </div>
      </div>
    </div>
    <Connect(Contact) />
  </div>
</div>
`;
